--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</script>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<h1>Hello World - Welcome to the world of Git version control! </h1>
 		<p>This page includes an alert writtren in javaScript.</p>
 		
 	</body>
