Added file to live gitHub pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<h1>Hello World - Welcome to the world of Git version control! </h1>
 		<p>This page includes an alert writtren in javaScript.</p>
+		<p>Now my page is live on gitHub! </p>
 		
 	</body>
 </html>
