--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Learn Enough JavaScript</title>
 	<script>
-		alert("hello, world!");
+		alert("Hello Stephen! This is a live webpage that anyone in the world can see!");
 	</script>
 	</head>
 	<body>
